--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/SyncronizePages.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/SyncronizePages.mxml
@@ -39,6 +39,7 @@
 			import net.vdombox.helpeditor.controller.events.PagesSyncronizationEvent;
 			import net.vdombox.helpeditor.model.AlertMessages;
 			import net.vdombox.helpeditor.model.SQLProxy;
+			import net.vdombox.helpeditor.view.itemrenderers.TreeItemRenderer;
 			
 			private var sqlProxy : SQLProxy = new SQLProxy();
 			
@@ -131,19 +132,22 @@
 				pagesSelector = new SyncPagesSelector();
 				pagesSelector.syncGroupName = syncGroupName;
 				
-				pagesSelector.addEventListener(PagesSyncronizationEvent.SELECTION_CHANGED, groupPagesChangeHandler);
+				pagesSelector.addEventListener(PagesSyncronizationEvent.SELECTION_CHANGED, groupPagesChangeHandler, true);
 				
 				vsGroupPages.addChild(pagesSelector);
 			}
 			
 			private function groupPagesChangeHandler (event : PagesSyncronizationEvent) : void
 			{
-				var pagesSelector : SyncPagesSelector = event.target as SyncPagesSelector;
+				var pageItemRenderer : TreeItemRenderer = event.target as TreeItemRenderer;
 				
-				if (event.pageSelected)
-					sqlProxy.addPageToSyncGroup(event.pageName, pagesSelector.syncGroupName);
+				if (!currentPagesSelector)
+					return;
+				
+				if (pageItemRenderer.pageSyncSelected)
+					sqlProxy.addPageToSyncGroup(pageItemRenderer.pageName, currentPagesSelector.syncGroupName);
 				else
-					sqlProxy.removePageFromSyncGroup(event.pageName, pagesSelector.syncGroupName);
+					sqlProxy.removePageFromSyncGroup(pageItemRenderer.pageName, currentPagesSelector.syncGroupName);
 			}
 		
 			private function updateSelectorView () : void
