bug fix: installer id (restrict symbols)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8237 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ProjectProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ProjectProperties.mxml
@@ -230,11 +230,29 @@
 				return compilerParamsChecker.isValidAppPath(embededApplicationBrowseBox.path);
 			}
 			
+			private function initInstallerID():void
+			{
+				txtInstallerId.text = project.installerId;
+				
+				validateInstallerId();
+			}
+			
+			private function validateInstallerId():void
+			{
+				txtInstallerId.errorString = validInstallerId ? null : "Possible symbols:\n* a-z\n* A-Z\n* 0-9\n* -\n* .";
+			}
+			
+			private function get validInstallerId () : Boolean
+			{
+				return compilerParamsChecker.isValidInstallerId(txtInstallerId.text);
+			}
+			
 			private function get buildAvailable (): Boolean
 			{
 				return validAppPath && 
 					validOutputInstallerFolderPath &&
-					validInstallerFileName;
+					validInstallerFileName &&
+					validInstallerId;
 			}
 			
 			private function get curTemplateOutputInstallerFolder() : String
@@ -253,10 +271,10 @@
 					return;
 				
 				txtName.text = project.name;
-				txtInstallerId.text = project.installerId;
 				txtDesc.text = project.description;
 				txtKey.text = project.key;
 				
+				initInstallerID();
 				initInstallerFileName();
 				initOutputFolderPath();
 				initAppPath();
@@ -361,7 +379,8 @@
 				<mx:TextInput width="300" id="txtInstallerId" 
 							  toolTip="{LanguageManager.sentences.template_ID_tooltip}"
 							  restrict="a-zA-Z0-9\-."
-							  maxChars="212"/>
+							  maxChars="212"
+							  change="validateInstallerId()"/>
 			</mx:GridItem>
 		</mx:GridRow>
 		
