--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxAttribute.mxml
@@ -33,15 +33,14 @@
 				var listItem : Object = { label: "", data: "" };
 				//comboBoxData.addItem( listItem );
 
-				while ( listValues = codeInterfaceValueRE.exec( String(_interface) ) )
-				{
-					listItem = { label: listValues[ 1 ], data: listValues[ 2 ] };
-					
-					comboBoxData.addItem( listItem );
+				findElement();
 				
-					if ( element == listValues[ 2 ] )
-						selectedItem = comboBoxData[ comboBoxData.length - 1 ];
-				}
+				/*if ( !selectedItem )
+				{
+					tableFont();
+					
+					findElement();
+				}*/
 				
 				comboBoxData.sort = new Sort();
 				comboBoxData.sort.fields = [ new SortField( "label", true ) ];
@@ -55,13 +54,138 @@
 					valueField.selectedItem = selectedItem;
 					_value = selectedItem.data;
 				}
-				else
+				/*else
 				{
 					var errorEvent : AttributeEvent = new AttributeEvent( AttributeEvent.ERROR1 );
 					errorEvent.value = resourceManager.getString( 'Wysiwyg_General', 'attribut_error_in_attribute');
 					dispatchEvent( errorEvent );
+				}*/
+				
+				function findElement() : void
+				{
+					comboBoxData = new ArrayCollection();
+					
+					while ( listValues = codeInterfaceValueRE.exec( String(_interface) ) )
+					{
+						listItem = { label: listValues[ 1 ], data: listValues[ 2 ] };
+						
+						comboBoxData.addItem( listItem );
+						
+						if ( element == listValues[ 2 ] )
+							selectedItem = comboBoxData[ comboBoxData.length - 1 ];
+					}
 				}
 				
+				function tableFont() : void
+				{
+					switch ( element )
+					{
+						case "andale":
+						{
+							element = 'Tahoma, "Geneva CY", geneva, sans-serif';
+							
+							break;
+						}
+							
+						case "arial ":
+						{
+							element = 'Arial, "Helvetica CY", "Nimbus Sans L", helvetica, sans-serif';
+							
+							break;
+						}
+							
+						case "book":
+						{
+							element = '"Palatino Linotype", "Book Antiqua", Palatino, serif';
+							
+							break;
+						}
+							
+						case "comic":
+						{
+							element = 'Tahoma, "Geneva CY", geneva, sans-serif';
+							
+							break;
+						}
+							
+						case "courier":
+						{
+							element = '"Courier New", "Nimbus Mono L", monospace';
+							
+							break;
+						}
+							
+						case "georgia":
+						{
+							element = 'Georgia, "Century Schoolbook L", Serif';
+							
+							break;
+						}
+							
+						case "helvetica":
+						{
+							element = 'Tahoma, "Geneva CY", geneva, sans-serif';
+							
+							break;
+						}
+							
+						case "impact":
+						{
+							element = 'Impact, "Charcoal CY", sans-serif';
+							
+							break;
+						}
+							
+						case "symbol":
+						{
+							element = 'Tahoma, "Geneva CY", geneva, sans-serif';
+							
+							break;
+						}
+							
+						case "tahoma":
+						{
+							element = 'Tahoma, "Geneva CY", geneva, sans-serif';
+							
+							break;
+						}
+							
+						case "terminal":
+						{
+							element = 'Tahoma, "Geneva CY", geneva, sans-serif';
+							
+							break;
+						}
+							
+						case "times":
+						{
+							element = '"Times New Roman", "Times CY", times, "Nimbus Roman No9 L", serif';
+							
+							break;
+						}
+							
+						case "verdana":
+						{
+							element = 'Verdana, "Geneva CY", geneva, "DejaVu Sans", sans-serif';
+							
+							break;
+						}
+							
+						case "webdings":
+						{
+							element = 'Tahoma, "Geneva CY", geneva, sans-serif';
+							
+							break;
+						}
+							
+						case "wingdings":
+						{
+							element = 'wingdings, "zapf dingbats"';
+							
+							break;
+						}
+					}
+				}
 			}
 			
 			private function changeHandler() : void
