Information showed on event and action element edited
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8241 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionElement.mxml
@@ -48,7 +48,7 @@
 					parametersContainer.removeAllElements();
 					
 					nameGroup.includeInLayout = true;
-					actionRenderer.includeInLayout = true;
+					//actionRenderer.includeInLayout = true;
 					
 					if ( skin.currentState == "normal" || skin.currentState == "disabled" )
 						(skin as ActionElementSkin).setLayout(true);
@@ -120,8 +120,8 @@
 		<s:Label text="{ data.objectName }" textAlign="center" verticalCenter="0" left="5" right="5" width="100%" maxDisplayedLines="1"/>
 	</s:Group>
 
-	<components:ParameterRenderer id="actionRenderer" icon="@Embed('assets/event.png')" width="100%"
-								  title="{ title }" includeInLayout="false"/>
+	<!--<components:ParameterRenderer id="actionRenderer" icon="@Embed('assets/event.png')" width="100%"
+								  title="{ title }" includeInLayout="false"/>-->
 
 	<s:VGroup id="parametersContainer"
 			  width="100%"
