--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
@@ -41,7 +41,7 @@
 					parametersContainer.removeAllElements();
 					
 					nameGroup.includeInLayout = true;
-					eventRenderer.includeInLayout = true;
+					//eventRenderer.includeInLayout = true;
 					
 					if ( skin.currentState == "normal" || skin.currentState == "disabled" )
 						(skin as EventElementSkin).setLayout(true);
@@ -105,8 +105,8 @@
 		<s:Label text="{ data.objectName }" textAlign="center" verticalCenter="0" left="5" right="5" width="100%" maxDisplayedLines="1"/>
 	</s:Group>
 
-	<components:ParameterRenderer id="eventRenderer" icon="@Embed('assets/event.png')" width="100%"
-								  title="{ title }" includeInLayout="false"/>
+	<!--<components:ParameterRenderer id="eventRenderer" icon="@Embed('assets/event.png')" width="100%"
+								  title="{ title }" includeInLayout="false"/>-->
 
 	<s:VGroup id="parametersContainer"
 			  width="100%"
