--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
@@ -115,9 +115,11 @@
 					return;
 				}
 
+				
+				
 				if ( newState == "normal" || newState == "disabled" )
-				{
-					titleLabel.text = headerGroup.toolTip = "Event";
+				{	
+					titleLabel.text = headerGroup.toolTip = hostComponent.data.name;
 					
 					if ( creationCompleted)
 						setLayout(true);
@@ -127,9 +129,7 @@
 					titleLabel.text = headerGroup.toolTip = hostComponent.data.objectName + ":" + hostComponent.data.name;
 					
 					if ( creationCompleted )
-					{
 						setLayout(false);
-					}
 				}
 			}
 			
