--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/SourceCode.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/SourceCode.mxml
@@ -4,12 +4,62 @@
 					xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" 
 					xmlns:OEComponents="OEComponents.*"
 					xmlns:ns="net.vdombox.object_editor.model.*"
-					label="SourceCode" xmlns:skins="net.vdombox.editors.skins.*" xmlns:editors="net.vdombox.editors.*"
-					
+					label="SourceCode" xmlns:skins="net.vdombox.editors.skins.*" xmlns:editors="net.vdombox.editors.*" xmlns:ns1="net.vdombox.object_editor.view.essence.*"
+					creationComplete="navigatorcontent2_creationCompleteHandler(event)"
+					remove="group1_removeHandler(event)"
 					>
+	
+	<fx:Script>
+		<![CDATA[
+			import mx.events.FlexEvent;
+			protected function keyHandler(event:KeyboardEvent):void
+			{
+				if ( event.ctrlKey && event.keyCode == Keyboard.F )
+				{
+					currentState = "find";
+				}
+			}
+			
+			protected function navigatorcontent2_creationCompleteHandler(event:FlexEvent):void
+			{
+				addEventListener( KeyboardEvent.KEY_DOWN, keyHandler, true, 0, true );
+			}
+			
+			protected function findBox_creationCompleteHandler(event:FlexEvent):void
+			{
+				findBox.addEventListener( Event.CLOSE, setNormalState, false, 0 , true );
+				
+				findBox.findText.setFocus();
+			}
+			
+			private function setNormalState( event : Event ) : void
+			{
+				currentState = "normal";
+			}
+			
+			protected function group1_removeHandler(event:FlexEvent):void
+			{
+				findBox.removeEventListener( Event.CLOSE, setNormalState );
+			}
+			
+		]]>
+	</fx:Script>
+	
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	
+	<s:states>
+		<s:State name="normal"/>
+		<s:State name="find"/>
+	</s:states>
+	
+	<s:VGroup width="100%" height="100%">
+		
+		<ns1:FindBox id="findBox" width="100%" includeIn="find" selectedScriptAreaComponent="{ pythonScriptEditor.scriptAreaComponent }"
+					 creationComplete="findBox_creationCompleteHandler(event)"/>
+		
 		<editors:PythonScriptEditor  id="pythonScriptEditor"  width="100%" height="100%"  scriptAreaComponent="{new ScriptAreaComponent()}" />
+		
+	</s:VGroup>
 </s:NavigatorContent>
