templates: 1) use only template name (without title), name - is NOT GUID 2) recursion in templates
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8251 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/Templates.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/Templates.mxml
@@ -134,11 +134,10 @@
 			protected function addTemplate():void
 			{
 				var newTemplate : Object = {};
-				newTemplate.name = UIDUtil.createUID();
-				newTemplate.title = "New template";
+				newTemplate.name = "New template";
 				newTemplate.content = "";
 				
-				sqlProxy.addTemplate(newTemplate.name, newTemplate.title, newTemplate.content);
+				sqlProxy.addTemplate(newTemplate.name, newTemplate.content);
 				
 				var allTemplates : Array = templatesList.dataProvider.source;
 				
@@ -247,20 +246,23 @@
 					return;
 				}
 				
-				applyTemplateTitle();
+				applyTemplateName();
 				
 				destroyItemEditor();
 			}
 			
-			private function applyTemplateTitle () : void
+			private function applyTemplateName () : void
 			{
 				var editedItemData : Object = templatesList.editedItemRenderer.data;
 				
-				editedItemData.title = listItemEditorInstance.text;
+				var oldName : String = editedItemData.name;
+				var newName : String = listItemEditorInstance.text;
+				
+				editedItemData.name = listItemEditorInstance.text;
 				
 				templatesList.selectedItem = editedItemData;
 				
-				sqlProxy.updateTemplateTitle(editedItemData.name, editedItemData.title);
+				sqlProxy.updateTemplateName(oldName, newName);
 			}
 			
 			private function get isCorrectTemplateTitle () : Boolean
@@ -379,7 +381,7 @@
 			<mx:List width="100%" height="100%"
 					 id="templatesList"
 					 dataProvider="{templates}"
-					 labelField="title"
+					 labelField="name"
 					 change="templatesList_changeHandler(event)"
 					 selectedIndex="-1"
 					 doubleClickEnabled="true"
