--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
@@ -10,11 +10,14 @@
 	
 	<fx:Script>
 		<![CDATA[
+			import flash.desktop.NativeApplication;
+			
 			import mx.collections.ArrayCollection;
 			import mx.containers.HBox;
 			import mx.controls.LinkButton;
 			import mx.controls.advancedDataGridClasses.AdvancedDataGridColumn;
 			import mx.controls.dataGridClasses.DataGridColumn;
+			import mx.core.UITextField;
 			import mx.events.AdvancedDataGridEvent;
 			import mx.events.DataGridEvent;
 			import mx.events.FlexEvent;
