--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/BoldSearchItemRenderer.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/BoldSearchItemRenderer.mxml
@@ -2,7 +2,9 @@
 <s:MXAdvancedDataGridItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 								  xmlns:s="library://ns.adobe.com/flex/spark" 
 								  xmlns:mx="library://ns.adobe.com/flex/mx" 
-								  focusEnabled="true" doubleClick="textArea_doubleClickHandler(event)">
+								  focusEnabled="true" 
+								  doubleClick="textArea_doubleClickHandler(event)"
+								  >
 	<fx:Script>
 		<![CDATA[
 			import mx.controls.dataGridClasses.DataGridListData;
